# drive_inventory

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
drive_inventory/: __init__.py  bootstrap.py  config.py
drive_inventory/adapters/: drive.py  notifications.py  repository.py
drive_inventory/domain/: model.py
drive_inventory/entrypoints/: sync_files.py  webhook.py
drive_inventory/service_layer/: sync_files.py
tests/: test_drive_service.py
